--- a/index.ipynb
+++ b/index.ipynb
@@ -58,10 +58,10 @@
    "outputs": [],
    "source": [
     "def three_x_y_at_one(x):\n",
-    "    return 3*1*x\n",
+    "    return 3*x*1\n",
     "\n",
     "def three_x_y_at_three(x):\n",
-    "    return 3*3*x\n",
+    "    return 3*x*x\n",
     "\n",
     "def three_x_y_at_six(x):\n",
     "    pass\n",
