--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,7 @@
     "    return three_x_y_at_one(x_values)\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
-    "    return \n",
+    "    return three_x_y_at_three(x_val)\n",
     "\n",
     "def y_values_for_at_six(x_values):\n",
     "    pass\n",
