--- a/index.ipynb
+++ b/index.ipynb
@@ -113,10 +113,10 @@
     "    return three_x_y_at_one(x_values)\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
-    "    return three_x_y_at_three(x_val)\n",
+    "    return three_x_y_at_three(x_values)\n",
     "\n",
     "def y_values_for_at_six(x_values):\n",
-    "    pass\n",
+    "    return three_x_y_at_six\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
     "    pass"
