--- a/index.ipynb
+++ b/index.ipynb
@@ -119,7 +119,7 @@
     "    return three_x_y_at_six(x_values)\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
-    "    return"
+    "    return three_x_y_at_nine(x_values)"
    ]
   },
   {
