Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -120,8 +120,8 @@
     "    return three_x_y_at_six(x_values)\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
-    "    \n",
-    "    return three_x_y_at_nine(x_values)"
+    "    nine = []\n",
+    "    return nine.appethree_x_y_at_nine(x_values)"
    ]
   },
   {
