--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,321 +121,14 @@
     "\n",
     "def y_values_for_at_nine(x_values):\n",
     "    nine = []\n",
-    "    return nine.appethree_x_y_at_nine(x_values)"
+    "    return nine.append(three_x_y_at_nine(x_values))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_values_for_at_one(zero_to_four) # [0, 3, 6, 9, 12]\n",
     "y_values_for_at_one(zero_to_ten) # [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30]\n",
