--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,8 @@
     "    return one.append(three_x_y_at_one(x_values))\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
-    "    return three_x_y_at_three(x_values)\n",
+    "    three = []\n",
+    "    return tthree_x_y_at_three(x_values)\n",
     "\n",
     "def y_values_for_at_six(x_values):\n",
     "    return three_x_y_at_six(x_values)\n",
