--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
     "\n",
     "def y_values_for_at_six(x_values):\n",
     "    six = []\n",
-    "    return three_x_y_at_six(x_values)\n",
+    "    return six.append(three_x_y_at_six(x_values))\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
     "    nine = []\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
