--- a/index.ipynb
+++ b/index.ipynb
@@ -113,14 +113,12 @@
     "    return list(map(lambda x: three_x_y_at_one(x),x_values))\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
-    "    return three.append(three_x_y_at_three(x_values))\n",
+    "    return lthree.append(three_x_y_at_three(x_values))\n",
     "\n",
     "def y_values_for_at_six(x_values):\n",
-    "    six = []\n",
     "    return six.append(three_x_y_at_six(x_values))\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
-    "    nine = []\n",
     "    return nine.append(three_x_y_at_nine(x_values))"
    ]
   },
