--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,7 @@
     "    return list(map(lambda one: three_x_y_at_one(one),x_values))\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
-    "    return list(map(lambda three: three_x_y_at_three(three),)\n",
+    "    return list(map(lambda three: three_x_y_at_three(three),x_values))\n",
     "\n",
     "def y_values_for_at_six(x_values):\n",
     "    return six.append(three_x_y_at_six(x_values))\n",
