Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -116,7 +116,7 @@
     "    return list(map(lambda three: three_x_y_at_three(three),x_values))\n",
     "\n",
     "def y_values_for_at_six(x_values):\n",
-    "    return six.append(three_x_y_at_six(x_values))\n",
+    "    return list(map(three_x_y_at_six(x_values))\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
     "    return nine.append(three_x_y_at_nine(x_values))"
