--- a/index.ipynb
+++ b/index.ipynb
@@ -119,7 +119,7 @@
     "    return list(map(lambda six: three_x_y_at_six(six), x_values))\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
-    "    return nine.append(three_x_y_at_nine(x_values))"
+    "    return list(map(lambda(three_x_y_at_nine(x_values))"
    ]
   },
   {
