Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -128,7 +128,7 @@
     "    return list(map(lambda six: three_x_y_at_six(six), x_values))\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
-    "    return list(map(lambda nine:(three_x_y_at_nine(nine),x_values))"
+    "    return list(map(lambda nine:(three_x_y_at_nine(nine),x_values)"
    ]
   },
   {
