--- a/index.ipynb
+++ b/index.ipynb
@@ -2419,7 +2419,7 @@
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
-    "    return list(map(lambda output: output[0]*))"
+    "    return list(map(lambda output: output[0]*x_value))"
    ]
   },
   {
