Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2420,7 +2420,7 @@
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
     "    outputs_x = list(map(lambda output: output[0]*x_value**output[1]*output[2],list_of_terms))\n",
-    "    outputs_y = list(map(lambda y_output: y_output[1]*y))\n",
+    "    outputs_y = list(map(lambda y_output: y_output[1]*y_value))\n",
     "    return "
    ]
   },
