Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2414,18 +2414,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
-    "    outputs = list(map(lambda output: output[0]*x_value**output[1]*y_value**output,list_of_terms))\n",
+    "    outputs = list(map(lambda output: output[0]*x_value**output[1]*y_value**output[2],list_of_terms))\n",
     "    return sum(outputs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2434,7 +2434,7 @@
        "8"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2445,16 +2445,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "46"
+       "40"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
