--- a/index.ipynb
+++ b/index.ipynb
@@ -2606,7 +2606,7 @@
    "outputs": [],
    "source": [
     "def df_dx(list_of_terms):\n",
-    "    return list(map(lambda derivative: ))"
+    "    return list(map(lambda derivative: te))"
    ]
   },
   {
