--- a/index.ipynb
+++ b/index.ipynb
@@ -2601,19 +2601,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "def df_dx(list_of_terms):\n",
-    "    return list(map(lambda derivative: term_df_dx(derivative),ist))"
+    "    return list(map(lambda derivative: term_df_dx(derivative),list_of_terms))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(8, 1, 1), (3, 0, 0), (0, -1, 1)]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_dx(four_x_squared_y_plus_three_x_plus_y) # [(8, 1, 1), (3, 0, 0)]"
    ]
