--- a/index.ipynb
+++ b/index.ipynb
@@ -2644,7 +2644,7 @@
    "outputs": [],
    "source": [
     "def term_df_dy(term):\n",
-    "    return term[0],ter"
+    "    return term[0],term[1]"
    ]
   },
   {
