--- a/index.ipynb
+++ b/index.ipynb
@@ -2783,7 +2783,7 @@
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
-    "    derivatives = "
+    "    derivatives_y = list(map(lamb))"
    ]
   },
   {
